k8s/downtown-booking/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netflix-next-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: netflix-next
  template:
    metadata:
      labels:
        app: netflix-next
    spec:
      containers:
        - name: netflix-next-container
          image: ghcr.io/kaizerpwn/nextjs-app:7431a9abe5ffa7a5a1fc97dce10687ed38dca33c
          ports:
            - containerPort: 3000
