k8s/downtown-booking/service.yml
apiVersion: v1
kind: Service
metadata:
  name: netflix-next-service 
spec:
  type: NodePort
  selector:
    app: netflix-next
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30000
